--- a/sass/preso.scss
+++ b/sass/preso.scss
@@ -84,6 +84,13 @@ div.note {
     width: 300px;
 }
 
+.reveal .slides img.dag-img {
+    border: none;
+    box-shadow: none;
+    background: none;
+    height: 700px;
+}
+
 %bash {
     font-family: monospace;
     white-space: pre;
