--- a/sass/preso.scss
+++ b/sass/preso.scss
@@ -91,6 +91,83 @@ div.note {
     height: 700px;
 }
 
+
+img.got-a-fever {
+    position: absolute;
+    height: 200px;
+    top: 400px;
+    left: 1500px;
+}
+
+.reveal section.toc {
+    ol {
+        line-height: 1.5;
+        width: 60%;
+        font-size: 150%;
+        position: relative;
+        top: -150px;
+        left: 250px;
+    }
+
+    img {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 500px;
+    }
+}
+
+.reveal section.linus {
+    img {
+        border: none;
+        box-shadow: none;
+        background: none;
+        top: -150px;
+        position: relative;
+    }
+}
+
+
+.reveal section div.data-integrity {
+    top: -50px;
+    position: relative;
+
+    img.rainbow-dash-armor {
+        border: none;
+        box-shadow: none;
+        background: none;
+        height: 200px;
+    }
+}
+
+
+
+.reveal section.present img {
+    border: none;
+    box-shadow: none;
+    background: none;
+}
+
+.reveal section img.ugh-as-if {
+    border: none;
+    box-shadow: none;
+    background: none;
+    top: -150px;
+    height: 600px;
+    position: relative;
+}
+
+.reveal section.more-cowbell {
+    img {
+        border: none;
+        box-shadow: none;
+        background: none;
+        top: -150px;
+        height: 850px;
+        position: relative;
+    }
+}
+
 %bash {
     font-family: monospace;
     white-space: pre;
@@ -132,7 +209,7 @@ div.plumbing {
         display: inline-block;
     }
     img {
-        height: 100%; 
+        height: 100%;
     }
 }
 
@@ -207,7 +284,7 @@ section.constant-time {
     @for $i from 0 through -$exponent {
       $value: $value / $base; } }
   // return the last value written
-  @return $value; 
+  @return $value;
 }
 
 @function pow($base, $exponent) {
